test: jmockit -> mockito (#19)